SimilizeWithProduction - Fix responsive style and fix change navbar when scrooling page on mobile version

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2041,4 +2041,15 @@ ul.galleries {
   text-align: right;
 
   a { color: #777; }
+}
+
+.wrap-deals-top {
+  display: table;
 } 
+
+.no-pad-xs {
+  @media(max-width:767px){
+    padding-left:0 !important;
+    padding-right:0 !important;
+  }
+}
