--- a/app/assets/stylesheets/pages/deals_page.scss
+++ b/app/assets/stylesheets/pages/deals_page.scss
@@ -642,12 +642,12 @@
 }
 .overlay:after {
   content:'\A';
-  width:96%; height:300px;
-  top:0; left:7px;
+  width:100%; height:300px;
+  top:0; left:0px;
   background:rgba(0,0,0,0.6);
   @media screen and (max-width: 480px) {
-    width:93%;
-    left: 14px;
+    width:100%;
+    left: 0px;
   }
 }
 .overlay:before {
@@ -663,4 +663,13 @@
 }
 .overlay:hover:after, .overlay:hover:before {
   opacity:1;
+}
+
+.wrap-hotel-list {
+  @media(max-width:767px) {
+    display: block;
+    overflow: hidden;
+    position: relative;
+    padding: 15px;
+  }
 }
